[tool.poetry]
name = "yuruseru"
version = "0.1.0"
description = ""
readme = "README.md"
authors = ["hppRC <hpp.ricecake@gmail.com>"]
packages = []

[tool.poetry.dependencies]
python = "3.10.x"
numpy = "^1.25.0"
pandas = "^2.0.3"
more-itertools = "^9.1.0"
scikit-learn = "^1.2.2"
tqdm = "^4.65.0"
typed-argument-parser = "^1.8.1"
datasets = "^2.13.1"
streamlit = "^1.24.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
